# dbc-macros

./: .gitignore  flake.nix  pyproject.toml  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc  nix-profile-24.05-2lvj8bm21ymxra61  nix-profile-24.05-2lvj8bm21ymxra61.rc
.direnv/flake-inputs/: 0zdy2hrzd797xa8jy10k3cs1q0z9inir-source  xydbxlvcmaxsrha3qn75qx7hgniqinx3-source
dbc_macros/: autoclicker.py  dual_wield.py  senzu.py
dotminecraft/config/: InvTweaks.cfg  InvTweaksRules.txt  InvTweaksTree.txt
dotminecraft/liteconfig/common/macros/: Autosummon-inv.txt  Autosummon.txt
