[tool.poetry]
name = "dbc-macros"
version = "0.1.0"
description = ""
authors = ["flashgnash"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
multiwield = "dbc_macros.dual_wield:main"
senzu = "dbc_macros.senzu:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
